--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="register_title">Lengkapi data dirimu dibawah ini ya</string>
     <string name="name_input_label">Masukan Nama</string>"
 
+    <string name="img_story">Gambar Story</string>
 </resources>
